# SmileCare-AI-Agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260626_1644_0985bedb4424_init_db.py
backend/app/: main.py
backend/app/agents/: dental_agent.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: appointments.py  chat.py  doctors.py  documents.py  patients.py  services.py
backend/app/core/: config.py  constants.py  exceptions.py  logging.py
backend/app/database/: base.py  base_model.py
backend/app/dependencies/: database.py
backend/app/models/: __init__.py  appointment.py  conversation_history.py  doctor.py  knowledge_document.py  patient.py  service.py
backend/app/prompts/: __init__.py
backend/app/rag/: base_embedder.py  qdrant_retriever.py  sentence_embedder.py
backend/app/repositories/: __init__.py  appointment.py  base.py  conversation_history.py  doctor.py  patient.py  service.py
backend/app/schemas/: __init__.py  appointment.py  chat.py  common.py  doctor.py  patient.py  service.py
backend/app/services/: __init__.py  appointment_service.py  doctor_service.py  patient_service.py  service_service.py
backend/app/utils/: pagination.py
backend/tests/: conftest.py  test_smoke.py
data/: doctors.csv  patients.csv  services.csv
frontend/: package-lock.json
frontend/app/: page.tsx
knowledge_base/: about_clinic.md  aftercare.md  contact.md  doctors.md  faq.md  insurance.md  policies.md  pricing.md  promotions.md  services.md
scripts/: generate_patients.py  seed_api.py  seed_qdrant.py
