[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-dental-receptionist-backend"
version = "0.1.0"
description = "AI-powered virtual receptionist for a modern dental clinic"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# =============================================================================
# Ruff — Linter + Formatter
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations (type hints)
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type for 'self'
    "ANN102",  # Missing type for 'cls'
    "S101",    # Use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]
"alembic/**/*.py" = ["ANN", "N999"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# =============================================================================
# Mypy — Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error", "ignore::DeprecationWarning"]
addopts = "-v --tb=short"

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
